--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   device_info_plus: ^2.1.1
   connectivity_plus: ^3.0.2
   flutter_blue: ^0.8.0
+  another_carousel_pro: ^1.0.0
+  image_picker: ^1.0.7
+  contacts_service: ^0.6.3
+  permission_handler: ^11.3.0
+  url_launcher: ^6.0.10
 
 
 dev_dependencies:
@@ -71,6 +76,7 @@ flutter:
     # - images/a_dot_ham.jpeg
     - lib/images/google.png
     - lib/images/apple.png
+    - lib/images/default_profile_image.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
