--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,10 +49,20 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
+    }
+
+    signingConfigs{
+        debug{
+            keyAlias 'androiddebugkey'
+            keyPassword 'dreamon22'
+            storeFile file('mykey.jks')
+            storePassword 'dreamon22'
+        }
     }
 
     buildTypes {
-        release {
+        debug {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
@@ -64,4 +74,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.android.support:multidex:1.0.3'
+}
