--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 <uses-permission android:name="android.permission.READ_CONTACTS" />
 <uses-permission android:name="android.permission.SEND_SMS"/>
+<uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:label="flutter_application_2"
         android:name="${applicationName}"
