--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.0
   lottie: ^3.1.0
+  random_string: ^2.3.1
+  cloud_firestore: ^4.15.8
+  uuid: ^3.0.4
+  flutter_local_notifications: ^9.9.1
 
 
 dev_dependencies:
@@ -82,6 +86,8 @@ flutter:
     - lib/images/apple.png
     - lib/images/default_profile_image.png
     - lib/json/old_town_walk.json
+    - lib/json/Animation_Result - 1710280667277.json
+    - lib/json/Animation_Win - 1710279144207.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
