--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   cloud_firestore: ^4.15.8
   uuid: ^3.0.4
   flutter_local_notifications: ^9.9.1
+  sqflite: ^2.0.1
+  path_provider: ^2.0.15
+  flutter_secure_storage: ^5.0.2
 
 
 dev_dependencies:
