--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_application_2
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: ">=3.2.6 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -54,10 +53,12 @@ dependencies:
   cloud_firestore: ^4.15.8
   uuid: ^3.0.4
   flutter_local_notifications: ^9.9.1
-  sqflite: ^2.0.1
+  sqflite: ^2.3.2
   path_provider: ^2.0.15
   flutter_secure_storage: ^5.0.2
-
+  google_maps_flutter: ^2.5.3
+  location: ^5.0.3
+  flutter_polyline_points: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +76,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -87,6 +87,7 @@ flutter:
     # - images/a_dot_ham.jpeg
     - lib/images/google.png
     - lib/images/apple.png
+    - lib/images/photo-1606.png
     - lib/images/default_profile_image.png
     - lib/json/old_town_walk.json
     - lib/json/Animation_Result - 1710280667277.json
